<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="141dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/tv_username"
        app:layout_constraintEnd_toStartOf="@+id/edt_username"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="141dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/tv_password"
        app:layout_constraintEnd_toStartOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edt_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <Button
        android:id="@+id/btn_selectall"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="134dp"
        android:backgroundTint="#D3D2D2"
        android:onClick="viewAll"
        android:text="@string/btn_selectall"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#D3D2D2"
        android:onClick="saveUser"
        android:text="@string/btn_add"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btn_signIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectall" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="119dp"
        android:backgroundTint="#D3D2D2"
        android:onClick="deleteUser"
        android:text="@string/btn_delete"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="61dp"
        android:backgroundTint="#D3D2D2"
        android:text="@string/btn_signIn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectall" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="59dp"
        android:backgroundTint="#D3D2D2"
        android:onClick="updateUser"
        android:text="@string/btn_update"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>